objects/Campaign_Member_Search_Critera__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Inner_Operator__c</fullName>
        <label>Inner Operator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outer_Operator__c</fullName>
        <label>Outer Operator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_SubGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires SubGroup</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Member Search Critera</label>
</CustomObject>